# Sudoku-Software-Project

./: Aux.c  Aux.h  CMakeLists.txt  Exceptions.c  Exceptions.h  Game.c  Game.h  IO.c  IO.h  List.c  List.h  ListTester.c  ListTester.h  MainAux.h  Parser.c  Parser.h  ParserTester.c  ParserTester.h  Solver.c  Solver.h  gameAux.c  gameAux.h  main.c  mainAux.c  mainAux.h  makefile  makefile.txt
